# AcademicAdventureGame

./: README.md
Projekt-gra/: CMakeLists.txt  DecisionElement.cpp  DecisionElement.h  DialogElement.cpp  DialogElement.h  End.cpp  End.h  Equipment.cpp  Equipment.h  FPS.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Map.cpp  Map.h  MapTypes.cpp  MapTypes.h  Menu.cpp  Menu.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  Settings.cpp  Settings.h  ThrowableContainer.cpp  ThrowableContainer.h  main.cpp
Projekt-gra/documentation/: Basic info
Projekt-gra/graphics/: ak.avif  cityBackgroundFirst.avif  computerBoss.avif  elevator.avif  pixel-art-furniture-asset-bed_735839-122.avif  pixel-art-illustration-cabinet-pixelated-closet-cabinet-wooden-closet-cabinet-pixelated-game_1038602-894.avif  shop.avif  wildboard.avif
Projekt-gra/lvls/: lvl0.txt
Projekt-gra/menuComponents/: Button.cpp  Button.h
Projekt-gra/objects/: AssultRiffle.cpp  AssultRiffle.h  Bed.cpp  Bed.h  Brick.cpp  Brick.h  Bullet.cpp  Bullet.h  Car.cpp  Car.h  CarEnemy.cpp  CarEnemy.h  CarWinch.cpp  CarWinch.h  CarWinchItem.cpp  CarWinchItem.h  ChatGptIcon.cpp  ChatGptIcon.h  Chest.cpp  Chest.h  Coin.cpp  Coin.h  Collectable.cpp  Collectable.h  Computer.cpp  Computer.h  ComputerBoss.cpp  ComputerBoss.h  DarkBlock.cpp  DarkBlock.h  Dirt.cpp  Dirt.h  Disk.cpp  Disk.h  Door.cpp  Door.h  Elevator.cpp  Elevator.h  Entity.cpp  Entity.h  (+62 more)
Projekt-gra/saves/temp/: temp0.txt
Projekt-gra/words/: SixLetterWords.txt
